--- a/Css/login.css
+++ b/Css/login.css
@@ -1,57 +1,29 @@
-@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,500&display=swap');
-
-* {
-	box-sizing: border-box;
-}
-
 body {
-	background-color: #26416b;
-	font-family: 'Open Sans', sans-serif;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	min-height: 100vh;
-	margin: 0;
+	font-family: "Poppins";
+	background: url("../resources/custom/trianglify.svg")no-repeat center center;
+	background-size: cover;
 }
 
-.container {
-	background-color: #9cd2d3;
-	border-radius: 5px;
-	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-	overflow: hidden;
+.containerr {
 	width: 400px;
-	max-width: 100%;
-}
+	height: 550px;
+	margin: 10vh auto 0 auto;
+	padding: 20px;
+	background-color: rgba(99, 98, 98, 0.76);
+	border-radius: 15px;
+	font-size: 12px;
 
-.header {
-	border-bottom: 1px solid #9cd2d3;
-	background-color: #9cd2d3;
-	padding: 20px 40px;
-}
-
-.header h2 {
-	margin: 0;
-}
-
-.form {
-	padding: 30px 40px;	
 }
 
 .form-control {
-	margin-bottom: 10px;
-	padding-bottom: 20px;
-	position: relative;
+	background-color: rgba(99, 98, 98, 0.068) !important;
+	border: none !important;
 }
 
-.form-control label {
-	display: inline-block;
-	margin-bottom: 5px;
-}
 
 .form-control input {
-	border: 2px solid #f0f0f0;
-	border-radius: 4px;
+	border: 2px solid rgba(99, 98, 98, 0.76);
+	border-radius: 10px;
 	display: block;
 	font-family: inherit;
 	font-size: 14px;
@@ -61,7 +33,7 @@ body {
 
 .form-control input:focus {
 	outline: 0;
-	border-color: #777;
+	border-color: rgba(99, 98, 98, 0.76);
 }
 
 .form-control.success input {
@@ -104,7 +76,7 @@ body {
 .form button {
 	background-color: #0799b6;
 	border: 2px solid #0799b6;
-	border-radius: 4px;
+	border-radius: 10px;
 	color: #fff;
 	display: block;
 	font-family: inherit;
@@ -112,21 +84,54 @@ body {
 	padding: 10px;
 	margin-top: 20px;
 	width: 100%;
+	cursor: pointer;
 }
 
 footer {
-    text-align: center;
-    color: white;
-    min-height: 2rem;
-    background-color: #232F3E;
-    
-    border-top: 1px solid rgba(50, 50, 50, 0.3);
-    width: 100%;
-    position: fixed;
-    bottom: 0;
+	text-align: center;
+	color: white;
+	min-height: 2rem;
+	background-color: #232F3E;
+	border-top: 1px solid rgba(50, 50, 50, 0.3);
+	width: 100%;
+	position: fixed;
+	bottom: 0;
+}
+
+.icono-perfil-container {
+	width: 10rem;
+	height: 10rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+	border-radius: 50%;
+	border: 2px solid #ccc;
+	position: relative;
+	margin: 0 auto;
 }
 
 .icono-perfil {
-    width: 15rem;
-    height: 15rem;
+	max-width: 100%;
+	height: auto;
+	display: block;
+	border-radius: 50%;
+}
+
+.registro {
+	padding: 15px;
+	display: block;
+	/* Para que el span ocupe todo el ancho y así se pueda aplicar margin */
+}
+
+.icon {
+	display: flex;
+	align-items: center;
+	font-size: 32px;
+	color: white;
+}
+
+.icon i.fa-lock {
+	margin-right: 1px;
+	/* Ajusta el espacio entre el ícono y el contenedor .form-control */
 }
