--- a/Css/navbar.css
+++ b/Css/navbar.css
@@ -1,85 +1,100 @@
-
 * {
-padding: 0;
-margin: 0;
-font-family:sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
-body
-{
-background-color: #26416b;
+
+.primario {
+  list-style: none;
+  background: #10161d;
+  text-align: center;
+  margin: 0;
 }
-ul {
-list-style: none;
-background: #232F3E;
-text-align: center;
+
+.primario li {
+  display: inline-block;
+  position: relative;
 }
-ul li {
-display: inline-block;
-position: relative;
+
+.primario li a {
+  display: block;
+  padding: 10px 25px;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  font-size: 16px;
 }
-ul li a {
-display: block;
-padding: 20px 25px;
-color: #FFF;
-text-decoration: none;
-text-align: center;
-font-size: 16px;
+
+ul.dropdown {
+  position: absolute;
+  display: none;
+  list-style: none;
+  width: 200px;
+  background-color: rgba(0, 0, 0, 0.774);
 }
-ul li ul.dropdown li {
-display: block;
-background: #232F3E;
-margin: 2px 0px;
+
+.primario li ul.dropdown li {
+  display: block;
 }
-ul li ul.dropdown {
-width:auto;
-background: #26416b;
-position: absolute;
-z-index: 999;
-display: none;
+
+.primario li ul.dropdown {
+  position: absolute;
+  z-index: 999;
+  display: none;
 }
-ul li a:hover {
-background: #222;
+
+.primario li a:hover {
+  background: #222;
 }
-ul li:hover ul.dropdown{
-display: block;
+
+.primario li:hover ul.dropdown {
+  display: block;
 }
 
 .buscar {
-    position: relative;
-    padding: 10px;
-  }
-  
-  .buscar input {
-    width: 0;
-    height: 40px;
-    padding: 0 20px;
-    font-size: 18px;
-    color: #222;
-    outline: none;
-    border: 1px solid silver;
-    border-radius: 30px;
-    transition: all 0.6s ease;
-  }
-  
-  .btn {
-    width: 55px;
-    height: 55px;
-    line-height: 55px;
-    top: 0;
-    right: 0;
-    position: absolute;
-    background: #33789C;
-    text-align: center;
-    color: white;
-    font-size: 18px;
-    border-radius: 50%;
-    cursor: pointer;
-  }
-  
-  .buscar:hover input {
-    width: 240px;
-  }
-  
-  .buscar input:focus {
-    width: 240px;
-  }
+  position: static;
+  padding: 12px;
+}
+
+.buscar input {
+  width: 0;
+  height: 40px;
+  padding: 0 20px;
+  font-size: 18px;
+  color: #222;
+  outline: none;
+  border: 1px solid silver;
+  border-radius: 30px;
+  transition: all 0.6s ease;
+}
+
+.btnn {
+  width: 50px;
+  height: 50px;
+  line-height: 60px;
+  top: 6px;
+  right: 6px;
+  position: absolute;
+  background: #33789c;
+  text-align: center;
+  color: white;
+  font-size: 18px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.buscar:hover input {
+  width: 240px;
+}
+
+.buscar input:focus {
+  width: 240px;
+}
+
+.icon {
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  color: rgb(252, 252, 252);
+}
