--- a/Css/BusqAdvan.css
+++ b/Css/BusqAdvan.css
@@ -1,17 +1,18 @@
-* {
+/*
+.banner-subcategoria {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: Georgia, serif; /* Cambio de fuente a Georgia (serif) */
+	font-family: Georgia, serif; /* Cambio de fuente a Georgia (serif) 
 }
 
 body {
-	background: #26416b; /* Color principal de fondo */
+	background: #26416b; /* Color principal de fondo 
 }
 
 a {
 	text-decoration: none;
-	color: #30435f; /* Color de enlaces */
+	color: #30435f; /* Color de enlaces
 }
 
 .contenedor {
@@ -26,10 +27,11 @@ main article {
 	padding: 20px;
 	height: 1000px;
 }
-
+*/
 /* ------------------------- */
 /* Enlaces del NAV */
 /* ------------------------- */
+/*
 .menu {
 	background: #232F3E;
 	padding: 5px 0;
@@ -37,7 +39,7 @@ main article {
 }
 
 .menu .contenedor-botones-menu {
-	/* display: flex; */
+	/* display: flex; 
 	display: none;
 	justify-content: space-between;
 }
@@ -108,10 +110,11 @@ main article {
 .menu .contenedor-enlaces-nav .enlaces a:hover {
 	border: 1px solid rgba(255,255,255,.4);
 }
-
+*/
 /* ------------------------- */
 /* GRID */
 /* ------------------------- */
+/*
 .contenedor-grid {
 	position: relative;
 }
@@ -147,11 +150,11 @@ main article {
 	background: #fff;
 	box-shadow: 0px 3px 6px rgba(0,0,0,.10);
 }
-
+*/
 /* ------------------------- */
 /* Categorias */
 /* ------------------------- */
-
+/*
 .grid .btn-regresar {
 	background: #232F3E;
 	color: #fff;
@@ -199,11 +202,11 @@ main article {
 .grid .categorias a:hover i {
 	display: inline-block;
 }
-
+*/
 /* ------------------------- */
 /* Subcategorias */
 /* ------------------------- */
-
+/*
 .grid .contenedor-subcategorias {
 	grid-area: subcategorias;
 }
@@ -266,10 +269,11 @@ main article {
 	width: 50%;
 	height: 50%;
 }
-
+*/
 /* ------------------------- */
 /* Mediaqueies */
 /* ------------------------- */
+/*
 @media screen and (max-width: 1000px) {
 	.menu .contenedor-enlaces-nav {
 		padding: 0 10px;
@@ -395,20 +399,23 @@ main article {
 	}
 }
 
+
+*/
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,500&display=swap');
 
-
+/*
 .header {
 	border-bottom: 1px solid #0799b6;
 	background-color: #0799b6;
 	padding: 20px 40px;
 }
-
+*/
 .header h2 {
 	margin: 0;
 }
 
+/*
 .form {
 	padding: 30px 40px;	
 }
@@ -433,7 +440,8 @@ main article {
 	padding: 10px;
 	width: 100%;
 }
-
+*/
+/*
 .form-control input:focus {
 	outline: 0;
 	border-color: #777;
@@ -529,11 +537,11 @@ main article {
     width: 240px;
   }
 
-
-  /* ------------------------- */
+*/
+/* ------------------------- */
 /* Busqueda*/
 /* ------------------------- */
-
+/*
 .formb {
     background-color: #fff;;
 	padding: 30px 40px;	
@@ -568,21 +576,17 @@ main article {
     margin: 20px;
 }
 
-.botonbusqueda{
-    width: 55px;
-    height: 55px;
-    line-height: 55px;
-    
-    background: #33789C;
-        color: white;
-    font-size: 18px;
-    
-
-}
-
 .Busq{
     background-color: #54BFCD ;
 	padding: 30px 40px;	
 }
+*/
 
+.form-check {
+	margin-left: 20px;
+}
 
+button,
+.resultado {
+	margin: 30px;
+}
