--- a/Css/Perfil.css
+++ b/Css/Perfil.css
@@ -1,172 +1,145 @@
-.bodycolor{
-
-    background-color: #26416b;
-}
-
-.container-perfil{
-   background-color:  #9cd2d3;
-   border-radius: 12px;
-   margin-top: 1rem;
-   display: flex;
-   flex-direction: column;
-   padding-top: 1rem;
+.container-perfil {
+	background-color: #9cd2d3;
+	border-radius: 12px;
+	margin-top: 1rem;
+	display: flex;
+	flex-direction: column;
+	padding-top: 1rem;
 }
 
 .button-Mensaje:hover {
-    background-color: rgba(50, 50, 50, 0.5);
+	background-color: rgba(50, 50, 50, 0.5);
 }
 
-.button-Mensaje{
-    margin-top: 1rem;
-    border-radius: 12px;
-    background-color: rgb(0, 0, 0);
-    color: white;
-    border: 0rem;
-    text-decoration: none;
-    height: 1.5rem;
-    font-weight: bold;
-    width: 15rem;
-}
-
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans';
-}
-.contenido{
-   
-    max-width: 1200px;
-    width: 100%;
-    margin: 40px auto;
-    display: flex;
-
-}
-.mostrador{
-    width: 100%;
-    transition: .5s ease;
-}
-.mostrador .fila{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 40px;
-}
-
-.mostrador .fila .item{
-    max-width: 210px;
-    padding: 30px;
-    height: 250px;
-    /*border: 2px solid red;*/
-    text-align: center;
-    margin: 0 10px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: .3s;
-}
-.mostrador .fila .item:hover{
-    background-color: #87aaee;
-}
-.mostrador .fila .item img{
-    width: 100%;
-    margin: 30px 0;
-}
-.mostrador .fila .item .descripcion{
-    color: #000000;
-    font-weight: bold;
-}
-.mostrador .fila .item .precio{
-    color: #000000;
-    font-weight: bold;
-    font-size: 20px;
-}
-.item{
-  background-color: #ececec;
-
-}
-.seleccion{
-    background-color: #ececec;
-    transition: .5s ease;
-    opacity: 0;
-    width: 0%;
-    border: 1px solid #ccc;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: hidden;
-}
-.cerrar{
-    position: absolute;
-    right: 0;
-    top: 20px;
-    right: 20px;
-    cursor: pointer;
-}
-
-.info{
-    padding: 20px;
-}
-.info img{
-    display: block;
-    margin: 30px auto;
-    width: 80%;
-}
-.info h2{
-    color: #707070;
-    margin-bottom: 10px;
-}
-.info p{
-    font-size: 14px;
-    color: #000000;
-    margin-bottom: 10px;
-}
-.info .precio{
-    font-size: 30px;
-    font-weight: bold;
-    color: #000000;
-    margin-bottom: 10px;
-    display: block;
-}
-.info .fila{
-    display: flex;
-    align-items: flex-end;
-}
-.info .fila label{
-    display: block;
-    margin-bottom: 10px;
-}
-.info .fila select{
-    width: 100px;
-    font-size: 18px;
-    padding: 6px;
-    margin-right: 30px;
-}
-.info .fila button{
-    height: 40px;
-    border: none;
-    padding: 0 10px;
-    color: #fff;
-    background-color: #f85151;
-}
-
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: Georgia, serif; /* Cambio de fuente a Georgia (serif) */
-}
-
-body {
-	background: #26416b; /* Color principal de fondo */
-}
-
-a {
+.button-Mensaje {
+	margin-top: 1rem;
+	border-radius: 12px;
+	background-color: rgb(0, 0, 0);
+	color: white;
+	border: 0rem;
 	text-decoration: none;
-	color: #30435f; /* Color de enlaces */
+	height: 1.5rem;
+	font-weight: bold;
+	width: 15rem;
+}
+
+.seleccion {
+	background-color: #ececec;
+	transition: .5s ease;
+	opacity: 0;
+	width: 0%;
+	border: 1px solid #ccc;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	overflow: hidden;
+}
+
+.chat {
+	overflow-y: scroll;
+	max-height: 300px;
+	margin-bottom: 10px;
+}
+
+.message {
+	padding: 5px 10px;
+	border-radius: 5px;
+	margin-bottom: 5px;
+}
+
+.received {
+	background-color: #f2f2f2;
+	text-align: left;
+}
+
+.sent {
+	background-color: #007bff;
+	color: #fff;
+	text-align: right;
+}
+
+#message-input {
+	flex: 1;
+	padding: 5px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	margin-right: 5px;
+}
+
+#send-button {
+	background-color: #007bff;
+	color: #fff;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+/* ------------------------- */
+/* Enlaces del NAV */
+
+.icono-perfil-container {
+	width: 10rem;
+	height: 10rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+	border-radius: 50%;
+	border: 2px solid #ccc;
+	position: relative;
+	margin: 0 auto;
+}
+
+.icono-perfil {
+	max-width: 100%;
+	height: auto;
+	display: block;
+	border-radius: 50%;
+}
+
+.sidebar {
+	background-color: #333;
+	color: #fff;
+	padding: 20px;
+	width: 300px;
+	height: 800px;
+	/* Ajusta el ancho de la barra lateral */
+}
+
+.sidebar h1 {
+	text-align: center;
+	font-size: 24px;
+	margin-bottom: 20px;
+}
+
+.sidebar ul {
+	list-style: none;
+	padding: 0;
+}
+
+.sidebar ul li {
+
+	padding: 10px;
+	cursor: pointer;
+	transition: background-color 0.3s;
+}
+
+.sidebar ul li:hover {
+	background-color: #444;
+}
+
+.sidebar ul li.active {
+	background-color: #555;
+}
+
+.sidebar li a {
+	display: block;
+	padding: 10px 5px;
+	color: #FFF;
+	text-decoration: none;
+	text-align: center;
+	font-size: 15px;
 }
 
 .contenedor {
@@ -182,141 +155,32 @@ main article {
 	height: 1000px;
 }
 
-.chat-container {
-    max-width: 400px;
-    margin: 0 auto;
-    border: 1px solid #ccc;
-    padding: 10px;
+/* Estilos para la tabla de cotización */
+.cotizacion-table {
+	width: 90%;
+	border-collapse: collapse;
+	margin-top: 20px;
 }
 
-.chat {
-    overflow-y: scroll;
-    max-height: 300px;
-    margin-bottom: 10px;
+.cotizacion-table th,
+.cotizacion-table td {
+	padding: 10px;
+	text-align: center;
+	border: 1px solid #ddd;
 }
 
-.message {
-    padding: 5px 10px;
-    border-radius: 5px;
-    margin-bottom: 5px;
-}
-
-.received {
-    background-color: #f2f2f2;
-    text-align: left;
-}
-
-.sent {
-    background-color: #007bff;
-    color: #fff;
-    text-align: right;
-}
-
-.input-container {
-    display: flex;
-}
-
-#message-input {
-    flex: 1;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-right: 5px;
-}
-
-#send-button {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-/* ------------------------- */
-/* Enlaces del NAV */
-/* ------------------------- */
-.menu {
-	background: #232F3E;
-	padding: 5px 0;
-	margin-bottom: 20px;
-}
-
-.menu .contenedor-botones-menu {
-	/* display: flex; */
-	display: none;
-	justify-content: space-between;
-}
-
-.menu .contenedor-botones-menu button {
-	font-size: 20px;
-	color: #fff;
-	padding: 10px 20px;
-	border: 1px solid transparent;
-	display: inline-block;
-	cursor: pointer;
-	background: none;
-}
-
-.menu .contenedor-botones-menu button:hover {
-	border: 1px solid rgba(255,255,255, .4);
-}
-
-.menu .contenedor-botones-menu .btn-menu-cerrar {
-	display: none;
-}
-
-.menu .contenedor-botones-menu .btn-menu-cerrar.activo {
-	display: inline-block;
-}
-
-.menu .contenedor-enlaces-nav {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-
-.menu .btn-departamentos {
-	color: #fff;
-	padding: 7px;
-	border-radius: 3px;
-	display: flex;
-	align-items: flex-end;
-	border: 1px solid transparent;
-	font-size: 12px;
-	cursor: default;
-}
-
-.menu .btn-departamentos i {
-	margin-left: 20px;
-	position: relative;
-	bottom: 3px;
-}
-
-.menu .btn-departamentos:hover {
-	border: 1px solid rgba(255,255,255, .4);
-}
-
-.menu .btn-departamentos span {
-	display: block;
-	font-size: 14px;
+.cotizacion-table th {
+	background-color: #f2f2f2;
 	font-weight: bold;
 }
 
-.menu .contenedor-enlaces-nav .enlaces a {
-	color: #ccc;
-	border: 1px solid transparent;
-	padding: 7px;
-	border-radius: 3px;
-	font-size: 14px;
-}
-
-.menu .contenedor-enlaces-nav .enlaces a:hover {
-	border: 1px solid rgba(255,255,255,.4);
+.cotizacion-table tbody tr:nth-child(even) {
+	background-color: #f2f2f2;
 }
 
 /* ------------------------- */
 /* GRID */
-/* ------------------------- */
+/* ------------------------- 
 .contenedor-grid {
 	position: relative;
 }
@@ -352,10 +216,10 @@ main article {
 	background: #fff;
 	box-shadow: 0px 3px 6px rgba(0,0,0,.10);
 }
-
+*/
 /* ------------------------- */
 /* Categorias */
-/* ------------------------- */
+/* ------------------------- 
 
 .grid .btn-regresar {
 	background: #232F3E;
@@ -404,10 +268,10 @@ main article {
 .grid .categorias a:hover i {
 	display: inline-block;
 }
-
+*/
 /* ------------------------- */
 /* Subcategorias */
-/* ------------------------- */
+/* ------------------------- 
 
 .grid .contenedor-subcategorias {
 	grid-area: subcategorias;
@@ -470,11 +334,11 @@ main article {
 .grid .galeria-subcategoria a {
 	width: 50%;
 	height: 50%;
-}
+}*/
 
 /* ------------------------- */
 /* Mediaqueies */
-/* ------------------------- */
+/* ------------------------- 
 @media screen and (max-width: 1000px) {
 	.menu .contenedor-enlaces-nav {
 		padding: 0 10px;
@@ -599,7 +463,8 @@ main article {
 		height: 100%;
 	}
 }
-
+*/
+/*
 .buscar {
     position: relative;
     padding: 10px;
@@ -638,4 +503,4 @@ main article {
   
   .buscar input:focus {
     width: 240px;
-  }
+  }*/
