--- a/Css/aprobar.css
+++ b/Css/aprobar.css
@@ -1,17 +1,12 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: Georgia, serif; /* Cambio de fuente a Georgia (serif) */
-}
-
 body {
-	background: #26416b; /* Color principal de fondo */
+	background: #26416b;
+	/* Color principal de fondo */
 }
 
 a {
 	text-decoration: none;
-	color: #30435f; /* Color de enlaces */
+	color: #30435f;
+	/* Color de enlaces */
 }
 
 .contenedor {
@@ -53,7 +48,7 @@ main article {
 }
 
 .menu .contenedor-botones-menu button:hover {
-	border: 1px solid rgba(255,255,255, .4);
+	border: 1px solid rgba(255, 255, 255, .4);
 }
 
 .menu .contenedor-botones-menu .btn-menu-cerrar {
@@ -88,7 +83,7 @@ main article {
 }
 
 .menu .btn-departamentos:hover {
-	border: 1px solid rgba(255,255,255, .4);
+	border: 1px solid rgba(255, 255, 255, .4);
 }
 
 .menu .btn-departamentos span {
@@ -106,7 +101,7 @@ main article {
 }
 
 .menu .contenedor-enlaces-nav .enlaces a:hover {
-	border: 1px solid rgba(255,255,255,.4);
+	border: 1px solid rgba(255, 255, 255, .4);
 }
 
 /* ------------------------- */
@@ -143,9 +138,9 @@ main article {
 	left: 65px;
 }
 
-.grid > div {
+.grid>div {
 	background: #fff;
-	box-shadow: 0px 3px 6px rgba(0,0,0,.10);
+	box-shadow: 0px 3px 6px rgba(0, 0, 0, .10);
 }
 
 /* ------------------------- */
@@ -399,25 +394,27 @@ main article {
 #image-slider-container {
 	text-align: center;
 	position: relative;
-  }
-  
-  #image-slider {
+}
+
+#image-slider {
 	width: 100%;
-	max-width: 400px; /* Ajusta el ancho según tus preferencias */
-	height: 300px; /* Ajusta la altura según tus preferencias */
+	max-width: 400px;
+	/* Ajusta el ancho según tus preferencias */
+	height: 300px;
+	/* Ajusta la altura según tus preferencias */
 	overflow: hidden;
 	margin: 0 auto;
 	position: relative;
-  }
-  
-  #image-slider img {
+}
+
+#image-slider img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 	transition: transform 0.3s ease-in-out;
-  }
-  
-  .slider-button {
+}
+
+.slider-button {
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
@@ -427,36 +424,35 @@ main article {
 	font-size: 24px;
 	cursor: pointer;
 	transition: background-color 0.3s ease;
-  }
-  
-  .slider-button:hover {
+}
+
+.slider-button:hover {
 	background-color: rgba(0, 0, 0, 0.8);
-  }
-  
-  #prev-button {
+}
+
+#prev-button {
 	left: 10px;
-  }
-  
-  #next-button {
+}
+
+#next-button {
 	right: 10px;
-  }
-  
-  /* Estilos para los botones "Aprobado" y "Desaprobado" */
-  .action-button {
+}
+
+/* Estilos para los botones "Aprobado" y "Desaprobado" */
+.action-button {
 	margin: 10px;
 	padding: 10px 20px;
 	font-size: 16px;
 	border: none;
 	cursor: pointer;
-  }
-  
-  #aprobado-button {
+}
+
+#aprobado-button {
 	background-color: green;
 	color: #fff;
-  }
-  
-  #desaprobado-button {
+}
+
+#desaprobado-button {
 	background-color: red;
 	color: #fff;
-  }
-  
+}
